# webhorus

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build_lib.py  pyproject.toml
.github/workflows/: build.yml
crcmod/: __init__.py
pywenet/: __main__.py  drs232_ldpc_build.py  fsk_build.py  modem.py  ssdv.py  ssdv_build.py  wenet.py
web/: audio.js  index.html  package.json  vite.config.js  wasm.js
web/src/: index.html
web/src/assets/: site.webmanifest  webhorus-0.1.0-cp312-cp312-pyodide_2024_0_wasm32.whl
web/src/js/: audio.js  main.js  wenet-worker.js  wenet.js
web/src/modules/: crc-7.1.0-py3-none-any.whl
web/src/public/: examplelink.html
web/src/public/assets/: webhorus-0.1.0-cp312-cp312-pyodide_2024_0_wasm32.whl  webhorus-0.1.0-cp312-cp312-pyodide_2024_0_wasm32_1.whl  webhorus-0.2.0-cp312-cp312-pyodide_2024_0_wasm32.whl
web/src/public/js/: audio.js  rtl_audio.js
web/src/public/py/: main.py
web/src/py/: main.py
web/src/scss/: style.scss
webhorus/: demod.py  horus_api_build.py
