[tool.poetry]
name = "webhorus"
version = "0.1.4"
description = ""
authors = ["xssfox <xss@sprocketfox.io>"]
readme = "README.md"
include = [
    { path = "horusdemodlib", format =  ["sdist"] },
]
packages = [
    { include = "webhorus", from="."},
    { include = "pywenet", from="."},
    { include = "crcmod", from="."},
    { include = "horusdemodlib", from="horusdemodlib"},
    { include = "rx", from="wenet"},
   
]


[tool.poetry.build]
script = "build_lib.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.12"
crc = "^7.1.0"
cffi = "^1.17.1"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.2"
cffi = "1.17.1"


[build-system]
requires = ["poetry-core","setuptools","cffi"]
build-backend = "poetry.core.masonry.api"
